<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:shadowColor="@color/black"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="20"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/mortgagePrincipalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/principal_amount"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editPrincipalAmount"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/borders"
        android:hint="@string/principal_hint"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgagePrincipalAmount"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.065"/>

    <TextView
        android:id="@+id/mortgageRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_amount"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrincipalAmount"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/editRate"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/borders"
        android:hint="@string/rate_hint"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgageRate"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.065"/>

    <TextView
        android:id="@+id/mortgageTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_amount"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRate"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/editTerm"
        android:ems="10"
        android:inputType="number"
        android:background="@drawable/borders"
        android:hint="@string/term_hint"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgageTerm"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.065"/>

    <Button
        android:id="@+id/calculateEMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_btn"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTerm"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/calculationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_string"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateEMI"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/EMIOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculationTitle"
        app:layout_constraintVertical_bias="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>